<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Breathe Mobile App</string>
    <string name="google_app_id">breathe-e3d3a</string>

    <!-- Activity detection strings -->
    <string name="in_vehicle">In a vehicle</string>
    <string name="on_bicycle">On a bicycle</string>
    <string name="on_foot">On foot</string>
    <string name="running">Running</string>
    <string name="still">Still</string>
    <string name="tilting">Tilting</string>
    <string name="unknown">Unknown activity</string>
    <string name="walking">Walking</string>
    <string name="unidentifiable_activity">Unidentifiable activity: %1$d</string>

    <string name="detected_activities_title">Detected Activities</string>

    <string name="request_activity_updates">Request updates</string>
    <string name="remove_activity_updates">Remove updates</string>
    <string name="activity_updates_added">Activity updates added</string>
    <string name="activity_updates_removed">Activity updates removed</string>

    <string name="not_connected">GoogleApiClient not yet connected. Try again.</string>

    <string name="clinicTextString">Enter Clinician Email</string>
    <string name="subject">Enter Subject ID</string>
    <string name="submit">Submit</string>
    <string name="welcome">Welcome to Breathe</string>
    <string name="welcome_text">Enter your Clinician Email and provided Subject ID below to register your patient on the paired Wearable</string>


    <string name="question_header">Breathe Survey\nPlaceholder</string>
    <string name="question_text">Please answer the following questions\n(insert questions below)</string>
</resources>
