<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#d6f4fa"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:id="@+id/mobile_layout">


        <Space
        android:layout_width="match_parent"
        android:layout_height="75dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:gravity="center"
            android:textSize="24dp"
            android:textColor="#141b62" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text"
            android:gravity="center"
            android:textSize="16dp" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        <!-- -->
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"

            android:id="@+id/codeText"
            android:hint="@string/passcode"
            android:textColor="#15192a" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/subjectText"
            android:hint="@string/subject"
            android:textColor="#15192a" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/subjectButton"
            android:text="@string/submit" />


    </LinearLayout>

</ScrollView>


