<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:id="@+id/mobile_layout">


        <Space
            android:layout_width="match_parent"
            android:layout_height="75dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_header"
            android:gravity="center"
            android:textSize="24dp"
            android:textColor="#141b62" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_text"
            android:textColor="#000000"
            android:gravity="center"
            android:textSize="16dp" />


        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />
        <!-- -->

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/doneButton"
            android:text="@string/submit" />




    </LinearLayout>


</ScrollView>


